@startuml DonaTrackER
skinparam linetype ortho
hide circle
hide empty members

' Convenciones generales:
' - PK: BIGINT, GenerationType.IDENTITY en todas las tablas.
' - Cada microservicio tiene su propio esquema/base -> no hay FKs entre paquetes.
' - Los value objects @Embeddable (MedioContacto, Ubicacion) NO tienen tabla propia:
'   sus columnas se listan embebidas dentro de la tabla dueña, prefijadas con el
'   nombre del atributo (ej: contacto_valor, contacto_tipo_contacto).

' ============================================================
' Microservicio Notificaciones (schema: notificaciones)
' ============================================================
package "notificaciones" {
  entity notificacion {
    * id : BIGINT <<PK, IDENTITY>>
    --
    fecha_de_envio : TIMESTAMP
    mensaje : VARCHAR(500)
    contacto_valor : VARCHAR(255)
    contacto_tipo_contacto : VARCHAR(20)
    completada : BOOLEAN
  }
}

' ============================================================
' Microservicio Donaciones (schema: donaciones)
' ============================================================
package "donaciones" {
  ' Donante / PersonaHumana / PersonaJuridica -> herencia SINGLE_TABLE
  ' (ver justificacion en JustificacionesDisenoRelacional.md).
  ' Columnas de PersonaHumana y PersonaJuridica conviven en la misma
  ' tabla; las especificas de un subtipo quedan NULL para el otro.
  entity donante {
    * id : BIGINT <<PK, IDENTITY>>
    --
    tipo_donante : VARCHAR(20) <<discriminator>>
    contacto_predeterminado_valor : VARCHAR(255)
    contacto_predeterminado_tipo_contacto : VARCHAR(20)
    ' -- especifico de PersonaHumana --
    nombre : VARCHAR(255)
    apellido : VARCHAR(255)
    fecha_nacimiento : DATE
    dni : VARCHAR(20)
    genero : VARCHAR(50)
    direccion : VARCHAR(255)
    ' -- especifico de PersonaJuridica --
    razon_social : VARCHAR(255)
    rubro : VARCHAR(255)
    tipo_organizacion : VARCHAR(50)
    cuit : VARCHAR(20)
  }

  ' @ElementCollection de MedioContacto (Donante.contactos) -> tabla
  ' auxiliar sin PK propia, clave logica (donante_id, valor, tipo_contacto).
  entity donante_contactos {
    * donante_id : BIGINT <<FK -> donante.id>>
    --
    valor : VARCHAR(255)
    tipo_contacto : VARCHAR(20)
  }

  donante ||--o{ donante_contactos

  ' @ElementCollection de Representante (PersonaJuridica.representantes):
  ' Representante no tiene id propio ni caso de uso que lo busque/edite
  ' aislado -> @Embeddable, igual criterio que MedioContacto/Ubicacion.
  ' Solo aplica a filas donante con tipo_donante = 'PERSONA_JURIDICA'.
  ' Representante.correo (MedioContacto) es un embeddable anidado
  ' dentro de otro embeddable -> se aplana igual en las columnas.
  entity donante_representantes {
    * donante_id : BIGINT <<FK -> donante.id>>
    --
    nombre : VARCHAR(255)
    apellido : VARCHAR(255)
    correo_valor : VARCHAR(255)
    correo_tipo_contacto : VARCHAR(20)
  }

  donante ||--o{ donante_representantes

  ' Categoria / Subcategoria: catalogo real (ver correccion en
  ' JustificacionesDisenoRelacional.md). Se agrego id + repositorio +
  ' logica de "buscar por nombre o crear" en DonacionServiceImpl /
  ' EntidadBeneficiariaServiceImpl -> cambio de codigo, no solo de
  ' mapeo, pedido explicitamente por el equipo para esta entrega.
  entity categoria {
    * id : BIGINT <<PK, IDENTITY>>
    --
    nombre : VARCHAR(255) <<UNIQUE>>
    pide_estado : BOOLEAN
    es_perecedero : BOOLEAN
  }

  entity subcategoria {
    * id : BIGINT <<PK, IDENTITY>>
    --
    nombre : VARCHAR(255) <<UNIQUE>>
    categoria_id : BIGINT <<FK -> categoria.id>>
  }

  categoria ||--o{ subcategoria

  ' Bien: sin id propio, sin endpoint que lo consulte aislado, siempre
  ' viaja como parte completa de Donacion.bienes -> @Embeddable via
  ' @ElementCollection (checklist: sin queries propias, sin volumen que
  ' lo justifique, no es cuello de botella). subcategoria SI es
  ' @ManyToOne real al catalogo de arriba.
  entity donacion_bienes {
    * donacion_id : BIGINT <<FK -> donacion.id>>
    --
    descripcion : VARCHAR(500)
    foto : VARCHAR(500)
    cantidad : BIGINT
    peso_kg_por_unidad : DOUBLE
    volumen_m3_por_unidad : DOUBLE
    subcategoria_id : BIGINT <<FK -> subcategoria.id>>
    estado_bien : VARCHAR(20)
    fecha_vencimiento : DATE
  }

  subcategoria ||--o{ donacion_bienes

  ' RegistroDonacion: la carga completa (no segmentada) que hace el
  ' donante en el deposito. Se persiste para conservar la descripcion
  ' general (Consigna 1), la trazabilidad de que Donaciones salieron
  ' de la misma carga y la fecha de ultima donacion del donante (cron
  ' de inactividad). Sus bienes NO se guardan aca: quedan en
  ' donacion_bienes tras la segmentacion y el registro los obtiene
  ' a traves de sus donaciones (@OneToMany mappedBy, sin columna nueva).
  entity registro_donacion {
    * id : BIGINT <<PK, IDENTITY>>
    --
    donante_id : BIGINT <<FK -> donante.id, NOT NULL>>
    descripcion : VARCHAR(500)
    fecha : TIMESTAMP
  }

  donante ||--o{ registro_donacion

  ' Donacion: entidad real (tiene id, repositorio propio, endpoints
  ' propios en DonacionController). entidad_beneficiaria_asignada_id
  ' nace NULL hasta que el matchmaking asigna una entidad.
  ' Cada Donacion sale de un unico RegistroDonacion (1 registro -> 1..N
  ' donaciones). DESNORMALIZACION deliberada: donante_id y fecha se
  ' repiten del registro (derivables por JOIN) para que las consultas
  ' sobre donacion, la entidad mas consultada del sistema, no necesiten
  ' JOIN a registro_donacion. Ver JustificacionesDisenoRelacional.md.
  ' estado_actual es la otra desnormalizacion: copia del estado de la
  ' ultima fila de cambio_estado, mantenida por Donacion.registrarEstado().
  ' Evita el subquery correlacionado que antes necesitaba buscarPorEstado
  ' ("...where h.fecha = (select max(h2.fecha) ...)") y que estadoActual()
  ' cargue el historial completo. La invariante "hay exactamente un estado
  ' vigente" queda garantizada por ser una columna y no un flag por fila.
  entity donacion {
    * id : BIGINT <<PK, IDENTITY>>
    --
    registro_donacion_id : BIGINT <<FK -> registro_donacion.id, NOT NULL>>
    donante_id : BIGINT <<FK -> donante.id>> <<desnormalizado>>
    entidad_beneficiaria_asignada_id : BIGINT <<FK -> entidad_beneficiaria.id>>
    subcategoria_id : BIGINT <<FK -> subcategoria.id>>
    estado_bienes : VARCHAR(20)
    fecha_vencimiento : DATE
    fecha : TIMESTAMP <<desnormalizado>>
    estado_actual : VARCHAR(20) <<desnormalizado>>
  }

  registro_donacion ||--|{ donacion
  donante ||--o{ donacion
  subcategoria ||--o{ donacion

  donacion ||--o{ donacion_bienes

  ' CambioEstado: entidad real con tabla propia (antes era @Embeddable +
  ' @ElementCollection en donacion_historial_estados). Se cambio por dos
  ' motivos, ninguno de performance:
  '  1) Sin PK, Hibernate no puede direccionar una fila: ante cada
  '     cambiarEstado() borraba TODAS las filas del historial de esa
  '     donacion y las reinsertaba. Una tabla de auditoria que se
  '     reescribe sola contradice el RNF 4 de TPA1 ("garantizar la
  '     trazabilidad y auditoria de los estados de cada donacion").
  '  2) Cada transicion lleva datos propios: TPA2 pide que la entrega
  '     deje registrado que camion la realizo. Un @ElementCollection de
  '     @Embeddable no admite polimorfismo, asi que no habia forma de
  '     que una transicion tuviera atributos que las otras no tienen.
  ' patente_camion queda NULL en toda transicion que no sea ENTREGADA.
  ' Se modela por transicion y no como columna de donacion porque una
  ' entrega fallida vuelve al deposito y se replanifica (TPA1 "Entrega
  ' fallida" + TPA2 "nueva asignacion de ruta"): puede haber varios
  ' intentos de entrega, cada uno con su camion.
  entity cambio_estado {
    * id : BIGINT <<PK, IDENTITY>>
    --
    donacion_id : BIGINT <<FK -> donacion.id, NOT NULL>>
    fecha : TIMESTAMP
    estado : VARCHAR(20)
    justificacion : VARCHAR(500)
    patente_camion : VARCHAR(20)
  }

  donacion ||--o{ cambio_estado

  ' fotosRecepcion: List<String> simple, sin identidad individual ->
  ' @ElementCollection de tipo basico (no hace falta @Embeddable).
  entity donacion_fotos_recepcion {
    * donacion_id : BIGINT <<FK -> donacion.id>>
    --
    foto_url : VARCHAR(500)
  }

  donacion ||--o{ donacion_fotos_recepcion

  ' EntidadBeneficiaria: entidad real (id, repositorio, CRUD completo
  ' en EntidadBeneficiariaController).
  entity entidad_beneficiaria {
    * id : BIGINT <<PK, IDENTITY>>
    --
    razon_social : VARCHAR(255)
    direccion : VARCHAR(255)
    telefono_valor : VARCHAR(255)
    telefono_tipo_contacto : VARCHAR(20)
  }

  ' @ElementCollection de MedioContacto (correoRepresentantes) -> mismo
  ' patron que donante_contactos.
  entity entidad_beneficiaria_correo_representantes {
    * entidad_beneficiaria_id : BIGINT <<FK -> entidad_beneficiaria.id>>
    --
    valor : VARCHAR(255)
    tipo_contacto : VARCHAR(20)
  }

  entidad_beneficiaria ||--o{ entidad_beneficiaria_correo_representantes

  ' Necesidad: a diferencia de Bien, SI es entidad real -> tiene id
  ' propio y endpoints dedicados (GET/POST/DELETE
  ' /api/entidad-beneficiaria/{entidadId}/necesidades/{necesidadId}).
  ' subcategoria_id: @ManyToOne real al catalogo (mismo criterio que
  ' Bien/Donacion, misma Subcategoria/CategoriaRequest reutilizados en
  ' EntidadBeneficiariaServiceImpl.toSubcategoria()).
  ' tipoNecesidad (TipoNecesidad/NecesidadExtraordinaria/
  ' NecesidadRecurrente) no es herencia de Necesidad sino un campo de
  ' tipo Strategy -> JPA no tiene @Inheritance para @Embeddable, se
  ' aplana a mano: tipo_necesidad (discriminador logico) + periodo
  ' (solo aplica si tipo_necesidad = RECURRENTE). Ver nota en
  ' ErroresACorregir.md: periodo nunca se completa desde la API hoy.
  entity necesidad {
    * id : BIGINT <<PK, IDENTITY>>
    --
    entidad_beneficiaria_id : BIGINT <<FK -> entidad_beneficiaria.id>>
    subcategoria_id : BIGINT <<FK -> subcategoria.id>>
    tipo_necesidad : VARCHAR(20)
    periodo : VARCHAR(20)
    descripcion : VARCHAR(500)
    cantidad : BIGINT
  }

  entidad_beneficiaria ||--o{ necesidad
  subcategoria ||--o{ necesidad

  ' Necesidad.donacionesAsignadas: List<Donacion> -> ambos lados son
  ' entidades reales con id propio -> tabla de union simple (no hace
  ' falta @Embeddable).
  entity necesidad_donaciones_asignadas {
    * necesidad_id : BIGINT <<FK -> necesidad.id>>
    * donacion_id : BIGINT <<FK -> donacion.id>>
  }

  necesidad ||--o{ necesidad_donaciones_asignadas
  donacion ||--o{ necesidad_donaciones_asignadas

  ' ResultadoMatchmaking: entidad real (id, ResultadoMatchmakingRepository,
  ' PUT /api/matchmaking/propuestas/{id}/estado direcciona por id).
  entity resultado_matchmaking {
    * id : BIGINT <<PK, IDENTITY>>
    --
    donacion_id : BIGINT <<FK -> donacion.id>>
    fecha_ejecucion : TIMESTAMP
    estado : VARCHAR(20)
  }

  donacion ||--o{ resultado_matchmaking

  ' entidadesSugeridas: List<EntidadBeneficiaria> -> ambos lados son
  ' entidades reales -> tabla de union simple.
  entity resultado_matchmaking_entidades_sugeridas {
    * resultado_matchmaking_id : BIGINT <<FK -> resultado_matchmaking.id>>
    * entidad_beneficiaria_id : BIGINT <<FK -> entidad_beneficiaria.id>>
  }

  resultado_matchmaking ||--o{ resultado_matchmaking_entidades_sugeridas
  entidad_beneficiaria ||--o{ resultado_matchmaking_entidades_sugeridas

  ' ComprobanteEntrega: NO se persiste como tal. Solo existe dentro de
  ' EventoEntregaExitosa (evento transitorio, ver GestorDeEventos): sin
  ' repositorio, sin id, se descarta tras emitir el evento, y su unico
  ' uso es armar el texto de la notificacion.
  ' OJO: su patenteCamion SI se persiste, pero por otra via: viaja por
  ' Donacion.confirmarEntrega(patente, fecha) y queda en la fila de
  ' cambio_estado de la transicion a ENTREGADA. Es lo que satisface el
  ' "quedara registrado que camion realizo la entrega" de TPA2; antes
  ' la patente terminaba solo en el mensaje de la notificacion.
}

' ============================================================
' Microservicio Logistica (schema: logistica)
' ============================================================
package "logistica" {
  ' Chofer: sin id propio (ni en el dominio ni en ChoferRequest/
  ' Response), sin ChoferController, siempre viaja embebido dentro de
  ' Camion -> @Embeddable.
  ' Camion: entidad real (id, CamionRepository, CRUD completo).
  ' Ubicacion embebida (ver convenciones generales, solo la ultima
  ' posicion conocida).
  entity camion {
    * id : BIGINT <<PK, IDENTITY>>
    --
    patente : VARCHAR(20)
    capacidad_volumen : DOUBLE
    altura : DOUBLE
    capacidad_carga : DOUBLE
    chofer_nombre : VARCHAR(255)
    chofer_apellido : VARCHAR(255)
    ubicacion_latitud : DOUBLE
    ubicacion_longitud : DOUBLE
    ubicacion_timestamp : TIMESTAMP
    ubicacion_velocidad : DOUBLE
  }

  ' Ruta: entidad real (id, RutaRepository, CRUD completo). No guarda
  ' chofer propio: el chofer se consulta siempre al camion asignado
  ' (camion_id -> camion.chofer_*).
  entity ruta {
    * id : BIGINT <<PK, IDENTITY>>
    --
    fecha : DATE
    estado : VARCHAR(20)
    camion_id : BIGINT <<FK -> camion.id>>
  }

  camion ||--o{ ruta

  ' Parada: en la API se direcciona por "orden" dentro de la ruta, no
  ' tiene un id propio expuesto (POST .../paradas/{paradaId}/... en
  ' realidad matchea por parada.getOrden(), ver RutaServiceImpl). Aun
  ' asi se mapea como @Entity real (no @Embeddable/@ElementCollection)
  ' por una restriccion tecnica de JPA: Parada.donacionIds es una
  ' List<Long> propia, y un @Embeddable usado dentro de otro
  ' @ElementCollection no puede a su vez tener una @ElementCollection
  ' anidada de forma portable. Es el caso "el framework te obliga a
  ' cambiar de estrategia" que menciono la catedra. entidad_id y los
  ' donacion_id de parada_donaciones son referencias logicas a
  ' donaciones-service (otro esquema) -> sin FK real, solo el valor.
  entity parada {
    * id : BIGINT <<PK, IDENTITY>>
    --
    ruta_id : BIGINT <<FK -> ruta.id>>
    orden : INTEGER
    destino : VARCHAR(255)
    entidad_id : BIGINT <<referencia logica a donaciones.entidad_beneficiaria, sin FK>>
  }

  ruta ||--o{ parada

  entity parada_donaciones {
    * parada_id : BIGINT <<FK -> parada.id>>
    --
    donacion_id : BIGINT <<referencia logica a donaciones.donacion, sin FK>>
  }

  parada ||--o{ parada_donaciones
}

@enduml
